Add Next.js config for Cloudflare Pages static export

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 # Environment variables
 .env
 .env.local
+.env.production
 .env.*.local
+.env.yaml
 
 # Python
 __pycache__/
@@ -38,6 +40,7 @@ next-env.d.ts
 
 # Docker
 postgres_data/
+Dockerfile_dev
 
 # Logs
 *.log
@@ -52,3 +55,4 @@ htmlcov/
 *.bak
 *.tmp
 .cache/
+DEPLOYMENT.md
