--- a/mvp/Dockerfile
+++ b/mvp/Dockerfile
@@ -17,8 +17,9 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy application code
 COPY backend/ .
 
-# Expose port
-EXPOSE 8000
+# Expose port (Cloud Run uses PORT env var)
+ENV PORT=8080
+EXPOSE 8080
 
-# Run application
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Run with production server
+CMD uvicorn main:app --host 0.0.0.0 --port $PORT --workers 1
